47
================

23/05/23 Fix bug when exporting incident CSV from SQL interface->Export
22/05/23 Daily observations feature/screen #489
21/05/23 Highlight in person banner if their last adoption is deceased
19/05/23 Minor mobile layout fixes, remove pdfjs dependency for deprecated app
19/05/23 Show fractional lb on find results
18/05/23 Fix filter breakage caused by tablesorter upgrade
18/05/23 Update tablesorter to 2.31.3
17/05/23 Update to JQuery 3.7.0 and JQueryUI 1.13.2
16/05/23 Stop select/filter buttons occluding first table header
16/05/23 Configurable FTP connection timeout, default=60s due to PetFinder #1280
15/05/23 Fix bug viewing/deleting document repo/report images with & in name
11/05/23 Map reports will now concatenate multiple columns to make easier SQL
11/05/23 Include email counts for send email/recipient list on mail merges #1266
10/05/23 Refactor CSV import rules, add ones for test/vacc/med
10/05/23 Mail merges will now count/send to EmailAddress2 if present #1266
09/05/23 Merge animal was reparenting additional person links with animal IDs
08/05/23 Allow users to choose their own quicklinks, inheriting from system #1072
06/05/23 Font preview on watermark options tab #1276
06/05/23 Fix missing indexes for ID Number fields
03/05/23 Support ANIMALDESCRIPTION when importing CSV #1273
01/05/23 Include couple email if set when emailing from person #1265
30/04/23 wordkeys: OriginalOwnerIDNumber/CurrentOwnerIDNumber/ReservedOwnerIDNumber
30/04/23 merge_person_details, include couple fields, optimise for single query
29/04/23 clone_from_template: if calculated date < today, use today
29/04/23 Validation for second email field #741
28/04/23 Merge new person fields/DOB/ID when merging details #1257
28/04/23 Fix bug in report SQL syntax checker when using CURRENT_DATE+/-
28/04/23 Add new person fields to wordprocessor tokens #1270
27/04/23 Ability to suffix report columns with N2BR to replace linebreaks